--- a/index.html
+++ b/index.html
@@ -227,6 +227,15 @@
         box-shadow: 0 2px 8px rgba(255, 0, 0, 0.4);
       }
 
+      /* Active (clickable) nav button overrides */
+      .nav-button.active {
+        cursor: pointer;
+      }
+
+      .nav-button.active::after {
+        content: none;
+      }
+
       footer {
         background: linear-gradient(
           180deg,
@@ -241,6 +250,199 @@
         margin-top: 5rem;
         position: relative;
         z-index: 10;
+      }
+
+      /* Sidebar Styles */
+      .sidebar-toggle {
+        position: fixed;
+        top: 20px;
+        left: 20px;
+        z-index: 1000;
+        background: linear-gradient(
+          135deg,
+          rgba(26, 35, 50, 0.95),
+          rgba(20, 28, 40, 0.95)
+        );
+        border: 2px solid rgba(255, 0, 0, 0.4);
+        border-radius: 8px;
+        padding: 12px 16px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        backdrop-filter: blur(10px);
+        box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
+      }
+
+      .sidebar-toggle:hover {
+        border-color: rgba(255, 0, 0, 0.7);
+        box-shadow: 0 4px 20px rgba(255, 0, 0, 0.3);
+        transform: scale(1.05);
+      }
+
+      .hamburger {
+        width: 25px;
+        height: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      }
+
+      .hamburger span {
+        display: block;
+        height: 3px;
+        background: #ff7d8b;
+        border-radius: 2px;
+        transition: all 0.3s ease;
+      }
+
+      .sidebar-toggle.active .hamburger span:nth-child(1) {
+        transform: rotate(45deg) translate(7px, 7px);
+      }
+
+      .sidebar-toggle.active .hamburger span:nth-child(2) {
+        opacity: 0;
+      }
+
+      .sidebar-toggle.active .hamburger span:nth-child(3) {
+        transform: rotate(-45deg) translate(7px, -7px);
+      }
+
+      .sidebar {
+        position: fixed;
+        top: 0;
+        left: -320px;
+        width: 320px;
+        height: 100vh;
+        background: linear-gradient(
+          180deg,
+          rgba(26, 35, 50, 0.98) 0%,
+          rgba(15, 20, 25, 0.98) 100%
+        );
+        backdrop-filter: blur(20px);
+        border-right: 2px solid rgba(255, 0, 0, 0.3);
+        box-shadow: 4px 0 24px rgba(0, 0, 0, 0.5);
+        transition: left 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+        z-index: 999;
+        overflow-y: auto;
+        padding: 80px 0 30px;
+      }
+
+      .sidebar.active {
+        left: 0;
+      }
+
+      .sidebar-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.6);
+        opacity: 0;
+        visibility: hidden;
+        transition: all 0.4s ease;
+        z-index: 998;
+      }
+
+      .sidebar-overlay.active {
+        opacity: 1;
+        visibility: visible;
+      }
+
+      .sidebar-header {
+        padding: 0 30px 20px;
+        border-bottom: 1px solid rgba(255, 0, 0, 0.2);
+        margin-bottom: 20px;
+      }
+
+      .sidebar-header h2 {
+        font-size: 1.5rem;
+        font-weight: 300;
+        color: #ffffff;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        margin-bottom: 5px;
+      }
+
+      .sidebar-header p {
+        font-size: 0.85rem;
+        color: #ff7d8b;
+        letter-spacing: 1px;
+      }
+
+      .sidebar-section {
+        padding: 0 30px;
+        margin-bottom: 30px;
+      }
+
+      .sidebar-section-title {
+        font-size: 0.8rem;
+        color: #a8b8c8;
+        text-transform: uppercase;
+        letter-spacing: 1.5px;
+        margin-bottom: 15px;
+        font-weight: 600;
+      }
+
+      .sidebar-nav {
+        list-style: none;
+      }
+
+      .sidebar-nav li {
+        margin-bottom: 8px;
+      }
+
+      .sidebar-nav a {
+        display: flex;
+        align-items: center;
+        padding: 12px 16px;
+        color: #e8eaed;
+        text-decoration: none;
+        border-radius: 6px;
+        transition: all 0.3s ease;
+        border: 1px solid transparent;
+        font-size: 0.95rem;
+        letter-spacing: 0.5px;
+      }
+
+      .sidebar-nav a:hover {
+        background: rgba(255, 0, 0, 0.1);
+        border-color: rgba(255, 0, 0, 0.3);
+        transform: translateX(5px);
+        color: #ffffff;
+      }
+
+      .sidebar-nav a.disabled {
+        opacity: 0.5;
+        cursor: not-allowed;
+      }
+
+      .sidebar-nav a.disabled:hover {
+        transform: none;
+        background: transparent;
+        border-color: transparent;
+      }
+
+      .sidebar-nav a::before {
+        content: "▸";
+        margin-right: 10px;
+        color: #ff7d8b;
+        transition: transform 0.3s ease;
+      }
+
+      .sidebar-nav a:hover::before {
+        transform: translateX(3px);
+      }
+
+      .coming-soon-badge {
+        margin-left: auto;
+        background: linear-gradient(135deg, #ff0000, #cc0000);
+        color: #ffffff;
+        padding: 2px 8px;
+        font-size: 0.65rem;
+        letter-spacing: 0.5px;
+        text-transform: uppercase;
+        border-radius: 3px;
+        font-weight: 600;
       }
 
       @media (max-width: 768px) {
@@ -259,11 +461,84 @@
         .button-grid {
           grid-template-columns: 1fr;
         }
+
+        .sidebar {
+          width: 280px;
+          left: -280px;
+        }
+
+        .sidebar-toggle {
+          top: 15px;
+          left: 15px;
+        }
       }
     </style>
   </head>
   <body>
     <div class="grid-overlay"></div>
+
+    <!-- Sidebar Toggle Button -->
+    <button
+      class="sidebar-toggle"
+      id="sidebarToggle"
+      aria-label="Toggle Sidebar"
+    >
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </button>
+
+    <!-- Sidebar Overlay -->
+    <div class="sidebar-overlay" id="sidebarOverlay"></div>
+
+    <!-- Sidebar -->
+    <nav class="sidebar" id="sidebar">
+      <div class="sidebar-header">
+        <h2>Navigation</h2>
+        <p>Quick Access</p>
+      </div>
+
+      <div class="sidebar-section">
+        <h3 class="sidebar-section-title">Project Pages</h3>
+        <ul class="sidebar-nav">
+          <li>
+            <a href="functional-projects.html"> Functional Projects </a>
+          </li>
+          <li>
+            <a href="#" class="disabled">
+              In Progress
+              <span class="coming-soon-badge">Coming Soon</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="disabled">
+              Upcoming
+              <span class="coming-soon-badge">Coming Soon</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="disabled">
+              Completed
+              <span class="coming-soon-badge">Coming Soon</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="sidebar-section">
+        <h3 class="sidebar-section-title">Additional</h3>
+        <ul class="sidebar-nav">
+          <li>
+            <a href="#" class="disabled">
+              Developers
+              <span class="coming-soon-badge">Coming Soon</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
     <header>
       <div class="container">
@@ -295,25 +570,25 @@
         <section class="navigation-section">
           <h2 class="section-heading">Browse Projects</h2>
           <div class="button-grid">
-            <div class="nav-button">
-              <h3>In Progress</h3>
-              <p>
-                Check out what I'm currently working on and see the progress on
-                active projects.
-              </p>
-            </div>
+            <a class="nav-button active" href="functional-projects.html">
+              <h3>Functional Projects</h3>
+              <p>View projects that are live and operational right now.</p>
+            </a>
 
             <div class="nav-button">
               <h3>Upcoming</h3>
               <p>Explore ideas and projects I'm planning to start soon.</p>
             </div>
 
-            <div class="nav-button">
+            <a
+              class="nav-button active"
+              href="https://github.com/YOUR-BIGWINGS"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <h3>Completed</h3>
-              <p>
-                Browse through finished projects and see what I've accomplished.
-              </p>
-            </div>
+              <p>Browse my finished work on GitHub.</p>
+            </a>
           </div>
         </section>
       </div>
@@ -324,5 +599,35 @@
         <p>&copy; 2025 Sync Group | Personal Project Portfolio</p>
       </div>
     </footer>
+
+    <script>
+      // Sidebar toggle functionality
+      const sidebarToggle = document.getElementById("sidebarToggle");
+      const sidebar = document.getElementById("sidebar");
+      const sidebarOverlay = document.getElementById("sidebarOverlay");
+
+      function toggleSidebar() {
+        sidebarToggle.classList.toggle("active");
+        sidebar.classList.toggle("active");
+        sidebarOverlay.classList.toggle("active");
+      }
+
+      sidebarToggle.addEventListener("click", toggleSidebar);
+      sidebarOverlay.addEventListener("click", toggleSidebar);
+
+      // Close sidebar on ESC key
+      document.addEventListener("keydown", function (e) {
+        if (e.key === "Escape" && sidebar.classList.contains("active")) {
+          toggleSidebar();
+        }
+      });
+
+      // Prevent disabled links from doing anything
+      document.querySelectorAll(".sidebar-nav a.disabled").forEach((link) => {
+        link.addEventListener("click", function (e) {
+          e.preventDefault();
+        });
+      });
+    </script>
   </body>
 </html>
