added  upcoming page

--- a/index.html
+++ b/index.html
@@ -513,10 +513,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="disabled">
-              Upcoming
-              <span class="coming-soon-badge">Coming Soon</span>
-            </a>
+            <a href="upcoming-projects.html">Upcoming</a>
           </li>
           <li>
             <a href="#" class="disabled">
@@ -556,14 +553,19 @@
           <p>
             This is my personal project showcase, where I track and document the
             various projects I'm working on. From concept to completion, this
-            site provides an overview of my creative and technical endeavors.
+            site provides an overview of my creative and technical plans and
+            ideas.
           </p>
 
           <div class="description">
-            I believe in organized development and clear documentation. This
-            portfolio helps me stay focused on my goals while providing a
-            central place to review what I've built, what I'm currently
-            developing, and what exciting projects are on the horizon.
+            Hi! I'm Brodie, a nerdy teen with an interest for developing, and
+            tech. I have various project ideas and hope to bring them to life
+            with this here website. I believe in keeping all my projects open
+            source for all interested eyes, though I ask you suport me by not
+            copying them directly without permission. I will soon add payment
+            details for those who wish to suport me with my development journey.
+            I will also link projects I do with hardware for those who take
+            interest and want to build things I have built.
           </div>
         </section>
 
@@ -575,10 +577,10 @@
               <p>View projects that are live and operational right now.</p>
             </a>
 
-            <div class="nav-button">
+            <a class="nav-button active" href="upcoming-projects.html">
               <h3>Upcoming</h3>
               <p>Explore ideas and projects I'm planning to start soon.</p>
-            </div>
+            </a>
 
             <a
               class="nav-button active"
