--- a/functional-projects.html
+++ b/functional-projects.html
@@ -38,10 +38,10 @@
         width: 100%;
         height: 100%;
         background-image: linear-gradient(
-            rgba(255, 0, 0, 0.02) 1px,
+            rgba(91, 155, 213, 0.02) 1px,
             transparent 1px
           ),
-          linear-gradient(90deg, rgba(255, 0, 0, 0.02) 1px, transparent 1px);
+          linear-gradient(90deg, rgba(91, 155, 213, 0.02) 1px, transparent 1px);
         background-size: 60px 60px;
         pointer-events: none;
         z-index: 0;
@@ -54,7 +54,8 @@
           rgba(15, 20, 25, 0.95) 100%
         );
         backdrop-filter: blur(10px);
-        border-bottom: 2px solid rgba(255, 0, 0, 0.3);
+        border-bottom: 2px solid transparent;
+        border-image: linear-gradient(90deg, #5b9bd5, #9ba8b3, #e8a87c) 1;
         padding: 2rem 0;
         box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
         position: relative;
@@ -70,11 +71,11 @@
       .back-button {
         background: linear-gradient(
           135deg,
-          rgba(255, 0, 0, 0.2),
-          rgba(204, 0, 0, 0.2)
+          rgba(91, 155, 213, 0.2),
+          rgba(232, 168, 124, 0.2)
         );
-        border: 2px solid rgba(255, 0, 0, 0.4);
-        color: #ff7d8b;
+        border: 2px solid rgba(91, 155, 213, 0.4);
+        color: #e8a87c;
         padding: 0.6rem 1.2rem;
         text-decoration: none;
         border-radius: 6px;
@@ -86,10 +87,10 @@
       .back-button:hover {
         background: linear-gradient(
           135deg,
-          rgba(255, 0, 0, 0.3),
-          rgba(204, 0, 0, 0.3)
+          rgba(91, 155, 213, 0.3),
+          rgba(232, 168, 124, 0.3)
         );
-        border-color: rgba(255, 0, 0, 0.6);
+        border-color: rgba(232, 168, 124, 0.6);
         transform: translateY(-2px);
       }
 
@@ -99,7 +100,7 @@
         letter-spacing: 3px;
         color: #ffffff;
         text-transform: uppercase;
-        text-shadow: 0 0 20px rgba(255, 0, 0, 0.5);
+        text-shadow: 0 0 20px rgba(91, 155, 213, 0.5);
       }
 
       .edit-projects-button {
@@ -210,196 +211,15 @@
         );
         backdrop-filter: blur(10px);
         border-radius: 12px;
-        border: 1px solid rgba(255, 0, 0, 0.2);
+        border: 1px solid rgba(91, 155, 213, 0.2);
         box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
         padding: 3rem;
         min-height: 500px;
       }
 
-      /* Sidebar Styles (shared with index) */
-      .sidebar-toggle {
-        position: fixed;
-        top: 20px;
-        left: 20px;
-        z-index: 1000;
-        background: linear-gradient(
-          135deg,
-          rgba(26, 35, 50, 0.95),
-          rgba(20, 28, 40, 0.95)
-        );
-        border: 2px solid rgba(255, 0, 0, 0.4);
-        border-radius: 8px;
-        padding: 12px 16px;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        backdrop-filter: blur(10px);
-        box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
-      }
-
-      .sidebar-toggle:hover {
-        border-color: rgba(255, 0, 0, 0.7);
-        box-shadow: 0 4px 20px rgba(255, 0, 0, 0.3);
-        transform: scale(1.05);
-      }
-
-      .hamburger {
-        width: 25px;
-        height: 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-      }
-
-      .hamburger span {
-        display: block;
-        height: 3px;
-        background: #ff7d8b;
-        border-radius: 2px;
-        transition: all 0.3s ease;
-      }
-
-      .sidebar-toggle.active .hamburger span:nth-child(1) {
-        transform: rotate(45deg) translate(7px, 7px);
-      }
-
-      .sidebar-toggle.active .hamburger span:nth-child(2) {
-        opacity: 0;
-      }
-
-      .sidebar-toggle.active .hamburger span:nth-child(3) {
-        transform: rotate(-45deg) translate(7px, -7px);
-      }
-
-      .sidebar {
-        position: fixed;
-        top: 0;
-        left: -320px;
-        width: 320px;
-        height: 100vh;
-        background: linear-gradient(
-          180deg,
-          rgba(26, 35, 50, 0.98) 0%,
-          rgba(15, 20, 25, 0.98) 100%
-        );
-        backdrop-filter: blur(20px);
-        border-right: 2px solid rgba(255, 0, 0, 0.3);
-        box-shadow: 4px 0 24px rgba(0, 0, 0, 0.5);
-        transition: left 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-        z-index: 999;
-        overflow-y: auto;
-        padding: 80px 0 30px;
-      }
-
-      .sidebar.active {
-        left: 0;
-      }
-
-      .sidebar-overlay {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.6);
-        opacity: 0;
-        visibility: hidden;
-        transition: all 0.4s ease;
-        z-index: 998;
-      }
-
-      .sidebar-overlay.active {
-        opacity: 1;
-        visibility: visible;
-      }
-
-      .sidebar-header {
-        padding: 0 30px 20px;
-        border-bottom: 1px solid rgba(255, 0, 0, 0.2);
-        margin-bottom: 20px;
-      }
-
-      .sidebar-header h2 {
-        font-size: 1.5rem;
-        font-weight: 300;
-        color: #ffffff;
-        letter-spacing: 2px;
-        text-transform: uppercase;
-        margin-bottom: 5px;
-      }
-
-      .sidebar-header p {
-        font-size: 0.85rem;
-        color: #ff7d8b;
-        letter-spacing: 1px;
-      }
-
-      .sidebar-section {
-        padding: 0 30px;
-        margin-bottom: 30px;
-      }
-
-      .sidebar-section-title {
-        font-size: 0.8rem;
-        color: #a8b8c8;
-        text-transform: uppercase;
-        letter-spacing: 1.5px;
-        margin-bottom: 15px;
-        font-weight: 600;
-      }
-
-      .sidebar-nav {
-        list-style: none;
-      }
-
-      .sidebar-nav li {
-        margin-bottom: 8px;
-      }
-
-      .sidebar-nav a {
-        display: flex;
-        align-items: center;
-        padding: 12px 16px;
-        color: #e8eaed;
-        text-decoration: none;
-        border-radius: 6px;
-        transition: all 0.3s ease;
-        border: 1px solid transparent;
-        font-size: 0.95rem;
-        letter-spacing: 0.5px;
-      }
-
-      .sidebar-nav a:hover {
-        background: rgba(255, 0, 0, 0.1);
-        border-color: rgba(255, 0, 0, 0.3);
-        transform: translateX(5px);
-        color: #ffffff;
-      }
-
-      .sidebar-nav a.disabled {
-        opacity: 0.5;
-        cursor: not-allowed;
-      }
-
-      .sidebar-nav a.disabled:hover {
-        transform: none;
-        background: transparent;
-        border-color: transparent;
-      }
-
-      .sidebar-nav a::before {
-        content: "▸";
-        margin-right: 10px;
-        color: #ff7d8b;
-        transition: transform 0.3s ease;
-      }
-
-      .sidebar-nav a:hover::before {
-        transform: translateX(3px);
-      }
-
       .coming-soon-badge {
         margin-left: auto;
-        background: linear-gradient(135deg, #ff0000, #cc0000);
+        background: linear-gradient(135deg, #5b9bd5, #e8a87c);
         color: #ffffff;
         padding: 2px 8px;
         font-size: 0.65rem;
@@ -440,7 +260,7 @@
 
       .project-item {
         background: rgba(15, 20, 25, 0.6);
-        border: 1px solid rgba(255, 0, 0, 0.2);
+        border: 1px solid rgba(91, 155, 213, 0.2);
         border-radius: 8px;
         padding: 2rem 2.5rem;
         margin-bottom: 1.5rem;
@@ -452,7 +272,7 @@
       }
 
       .project-item:hover {
-        border-color: rgba(255, 0, 0, 0.4);
+        border-color: rgba(91, 155, 213, 0.4);
         transform: translateX(5px);
       }
 
@@ -466,7 +286,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        border: 1px solid rgba(255, 0, 0, 0.15);
+        border: 1px solid rgba(91, 155, 213, 0.15);
       }
 
       .project-icon img {
@@ -493,7 +313,7 @@
       }
 
       .project-name a:hover {
-        color: #ff7d8b;
+        color: #e8a87c;
         text-decoration: underline;
       }
 
@@ -528,7 +348,7 @@
           rgba(20, 28, 40, 0.98) 100%
         );
         backdrop-filter: blur(20px);
-        border: 2px solid rgba(255, 0, 0, 0.3);
+        border: 2px solid rgba(91, 155, 213, 0.3);
         border-radius: 8px;
         padding: 2.5rem;
         max-width: 500px;
@@ -571,7 +391,7 @@
         width: 100%;
         padding: 0.8rem;
         background: rgba(15, 20, 25, 0.8);
-        border: 1px solid rgba(255, 0, 0, 0.3);
+        border: 1px solid rgba(91, 155, 213, 0.3);
         border-radius: 4px;
         color: #e8eaed;
         font-family: inherit;
@@ -582,8 +402,8 @@
       .form-group input:focus,
       .form-group textarea:focus {
         outline: none;
-        border-color: rgba(255, 0, 0, 0.6);
-        box-shadow: 0 0 0 3px rgba(255, 0, 0, 0.1);
+        border-color: rgba(91, 155, 213, 0.6);
+        box-shadow: 0 0 0 3px rgba(91, 155, 213, 0.1);
       }
 
       .form-group textarea {
@@ -611,19 +431,19 @@
       }
 
       .btn-primary {
-        background: linear-gradient(135deg, #ff0000, #cc0000);
+        background: linear-gradient(135deg, #5b9bd5, #e8a87c);
         color: #ffffff;
       }
 
       .btn-primary:hover {
         transform: translateY(-2px);
-        box-shadow: 0 6px 20px rgba(255, 0, 0, 0.4);
+        box-shadow: 0 6px 20px rgba(91, 155, 213, 0.4);
       }
 
       .btn-secondary {
         background: rgba(255, 255, 255, 0.1);
         color: #e8eaed;
-        border: 1px solid rgba(255, 0, 0, 0.3);
+        border: 1px solid rgba(91, 155, 213, 0.3);
       }
 
       .btn-secondary:hover {
@@ -631,7 +451,7 @@
       }
 
       .error-message {
-        color: #ff6b6b;
+        color: #e8a87c;
         font-size: 0.85rem;
         margin-top: 0.5rem;
         display: none;
@@ -669,10 +489,10 @@
           rgba(15, 20, 25, 0.95) 0%,
           rgba(10, 14, 19, 0.95) 100%
         );
-        border-top: 2px solid rgba(255, 0, 0, 0.3);
+        border-top: 2px solid rgba(91, 155, 213, 0.3);
         padding: 2rem 0 4rem;
         text-align: center;
-        color: #ff7d8b;
+        color: #e8a87c;
         font-size: 0.9rem;
         margin-top: 3rem;
         position: relative;
@@ -693,11 +513,6 @@
           padding: 1.5rem;
         }
 
-        .sidebar {
-          width: 280px;
-          left: -280px;
-        }
-
         .sidebar-toggle {
           top: 15px;
           left: 15px;
@@ -712,30 +527,6 @@
   </head>
   <body>
     <div class="grid-overlay"></div>
-
-    <!-- Sidebar Toggle Button -->
-    <button
-      class="sidebar-toggle"
-      id="sidebarToggle"
-      aria-label="Toggle Sidebar"
-    >
-      <div class="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </button>
-
-    <!-- Sidebar Overlay -->
-    <div class="sidebar-overlay" id="sidebarOverlay"></div>
-
-    <!-- Sidebar -->
-    <nav class="sidebar" id="sidebar">
-      <div class="sidebar-header">
-        <h2>Navigation</h2>
-        <p>Quick Access</p>
-      </div>
-    </nav>
 
     <header>
       <div class="container">
@@ -932,34 +723,6 @@
     </div>
 
     <script>
-      // Sidebar toggle functionality
-      const sidebarToggle = document.getElementById("sidebarToggle");
-      const sidebar = document.getElementById("sidebar");
-      const sidebarOverlay = document.getElementById("sidebarOverlay");
-
-      function toggleSidebar() {
-        sidebarToggle.classList.toggle("active");
-        sidebar.classList.toggle("active");
-        sidebarOverlay.classList.toggle("active");
-      }
-
-      sidebarToggle?.addEventListener("click", toggleSidebar);
-      sidebarOverlay?.addEventListener("click", toggleSidebar);
-
-      // Close sidebar on ESC key
-      document.addEventListener("keydown", function (e) {
-        if (e.key === "Escape" && sidebar.classList.contains("active")) {
-          toggleSidebar();
-        }
-      });
-
-      // Prevent disabled links from doing anything
-      document.querySelectorAll(".sidebar-nav a.disabled").forEach((link) => {
-        link.addEventListener("click", function (e) {
-          e.preventDefault();
-        });
-      });
-
       // Configuration
       const _0x4a2c = atob("U2M0bm4zcjE=");
 
