(hopefully) final edits

--- a/index.html
+++ b/index.html
@@ -328,10 +328,10 @@
             tech. I have various project ideas and hope to bring them to life
             with this here website. I believe in keeping all my projects open
             source for all interested eyes, though I ask you suport me by not
-            copying them directly without permission. I will soon add payment
-            details for those who wish to suport me with my development journey.
-            I will also link projects I do with hardware for those who take
-            interest and want to build things I have built.
+            copying them directly without permission. below is a button that
+            takes you to my Ko-fi page where you can support my work and
+            projects. I will also link projects I do with hardware for those who
+            take interest and want to build things I have built.
           </div>
 
           <a
